# mold_sim

./: .gitignore  Cargo.toml
res/shaders/: actors.comp.glsl  fragment.frag.glsl  pheromone.comp.glsl  vertex.vert.glsl
src/: compute.rs  main.rs
