[package]
name = "mold-sim"
version = "0.1.0"
authors = ["Jonas Luther <kryo4096@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
vulkano = "0.21"
vulkano-shaders = "0.21"
winit = "0.24"
vulkano-win = "0.21"
rustop = "1.1"
rand = "0.8"
egui = "0.10"
egui_winit_platform = "0.5"
egui_vulkano = {git = "https://github.com/derivator/egui_vulkano", branch = "main"}
